syntax = "proto3";

import "google/protobuf/empty.proto";
import "api/conflict.proto";
package api.passwords;

option go_package = "pkg/grpc";

service Passwords {
  rpc Sync(Password) returns (PasswordSyncResponse);
  rpc Delete(PasswordDeleteRequest) returns (google.protobuf.Empty);
  rpc GetList(google.protobuf.Empty) returns (PasswordGetListResponse);
}

message Password {
  string name = 1;
  string value = 2;
  string meta = 3;
  int32 version = 4;
}

message PasswordConflict {
  conflict.ConflictType type = 1;
  Password password = 2;
}

message PasswordSyncResponse {
  bool success = 1;
  optional PasswordConflict conflict = 2;
}

message PasswordDeleteRequest {
  string name = 1;
}

message PasswordGetListResponse {
  repeated Password passwords = 1;
}
